--- a/iitrproject.ipynb
+++ b/iitrproject.ipynb
@@ -2168,7 +2168,7 @@
       "source": [
         "from google.colab import files\n",
         "\n",
-        "files.download('video_titles.csv')\n"
+        "files.download('video_titles.csv') #the print actually\n"
       ]
     },
     {
@@ -2575,8 +2575,8 @@
         "    return words_freq[:n]\n",
         "\n",
         "\n",
-        "df12_titles = df12_titles[:1000]\n",
-        "df34_titles = df34_titles[:1000]\n",
+        "df12_titles = df12_titles[:15000]\n",
+        "df34_titles = df34_titles[:15000]\n",
         "\n",
         "\n",
         "common_words = get_top_n_words(df12_titles, n=50)\n",
@@ -2621,40 +2621,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZCa9PBY0KjrL",
-        "outputId": "be57d22a-17f1-4818-bfab-2d0cb371aaad"
+        "outputId": "ccdcfe41-dfca-4b01-8519-8a450d0426e3"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Top 50 Common Words:\n",
-            " [('india', 171), ('modi', 153), ('pm', 92), ('bjp', 77), ('rahul', 72), ('gandhi', 70), ('says', 64), ('congress', 58), ('pakistan', 54), ('china', 51), ('live', 50), ('2023', 46), ('govt', 45), ('indian', 41), ('minister', 41), ('delhi', 40), ('budget', 40), ('yatra', 37), ('adani', 34), ('bharat', 34), ('world', 33), ('jodo', 33), ('new', 30), ('chief', 29), ('jaishankar', 28), ('mp', 28), ('politics', 28), ('cm', 28), ('theprint', 27), ('gujarat', 27), ('punjab', 25), ('army', 24), ('mumbai', 23), ('president', 23), ('kashmir', 23), ('russia', 22), ('sabha', 22), ('2022', 21), ('border', 21), ('union', 20), ('day', 20), ('watch', 20), ('people', 20), ('state', 19), ('national', 19), ('economic', 19), ('party', 18), ('covid', 18), ('leader', 17), ('ukraine', 17)]\n",
+            " [('india', 1975), ('modi', 1725), ('covid', 1310), ('pm', 1139), ('says', 1121), ('bjp', 1021), ('delhi', 828), ('govt', 747), ('congress', 687), ('cm', 668), ('china', 618), ('gandhi', 550), ('new', 518), ('indian', 481), ('minister', 418), ('singh', 406), ('rahul', 385), ('chief', 383), ('kejriwal', 334), ('19', 332), ('pakistan', 326), ('punjab', 287), ('police', 281), ('people', 277), ('day', 262), ('और', 262), ('पर', 260), ('ukraine', 259), ('shah', 255), ('president', 251), ('world', 250), ('russia', 245), ('army', 241), ('politics', 232), ('bihar', 221), ('leader', 220), ('yogi', 218), ('war', 217), ('party', 201), ('कर', 199), ('amit', 193), ('maharashtra', 192), ('crisis', 191), ('national', 189), ('cases', 189), ('trump', 189), ('farmers', 188), ('year', 186), ('aap', 186), ('political', 183)]\n",
             "\n",
             "Top 50 Uncommon Words in df1 and df2:\n",
-            " [('uncovered', 1), ('cover', 1), ('smoking', 1), ('gun', 1), ('opinionated', 1), ('ocd', 1), ('victims', 1), ('uniform', 1), ('code', 1), ('met', 1), ('fine', 1), ('difficult', 1), ('line', 1), ('working', 1), ('2100', 1), ('impunity', 1), ('erdogan', 1), ('strongarm', 1), ('charred', 1), ('bodies', 1), ('bhiwani', 1), ('revealed', 1), ('measure', 1), ('trajectory', 1), ('unlikely', 1), ('superpower', 1), ('lowy', 1), ('director', 1), ('charaideo', 1), ('moidams', 1), ('entry', 1), ('unesco', 1), ('heritage', 1), ('tag', 1), ('personnel', 1), ('welcomed', 1), ('adana', 1), ('search', 1), ('expressed', 1), ('desire', 1), ('democratic', 1), ('democractic', 1), ('open', 1), ('authoritarianism', 1), ('professor', 1), ('gaurav', 1), ('vallabh', 1), ('12th', 1), ('conference', 1), ('goal', 1)]\n",
+            " [('uncovered', 1), ('opinionated', 1), ('strongarm', 1), ('bhiwani', 1), ('lowy', 1), ('charaideo', 1), ('moidams', 1), ('adana', 1), ('expressed', 1), ('desire', 1), ('democractic', 1), ('altercation', 1), ('prithvi', 1), ('ioniq', 1), ('impressions', 1), ('ipc', 1), ('crpc', 1), ('saansad', 1), ('aadi', 1), ('partially', 1), ('leveraged', 1), ('jpc', 1), ('cpim', 1), ('favoured', 1), ('realize', 1), ('samadhan', 1), ('indicated', 1), ('expunged', 1), ('aerobatic', 1), ('beautification', 1), ('girgaon', 1), ('chowpatty', 1), ('psycho', 1), ('geometric', 1), ('madhyam', 1), ('varg', 1), ('spoiled', 1), ('muni', 1), ('ep52', 1), ('hatay', 1), ('box', 1), ('intimate', 1), ('wash', 1), ('dettol', 1), ('wfh', 1), ('deshpande', 1), ('irresponsibly', 1), ('d2', 1), ('estrangement', 1), ('sirohi', 1)]\n",
             "\n",
             "Top 50 Uncommon Words in df3 and df4:\n",
-            " [('uncovered', 1), ('cover', 1), ('smoking', 1), ('gun', 1), ('opinionated', 1), ('ocd', 1), ('victims', 1), ('uniform', 1), ('code', 1), ('met', 1), ('fine', 1), ('difficult', 1), ('line', 1), ('working', 1), ('2100', 1), ('impunity', 1), ('erdogan', 1), ('strongarm', 1), ('charred', 1), ('bodies', 1), ('bhiwani', 1), ('revealed', 1), ('measure', 1), ('trajectory', 1), ('unlikely', 1), ('superpower', 1), ('lowy', 1), ('director', 1), ('charaideo', 1), ('moidams', 1), ('entry', 1), ('unesco', 1), ('heritage', 1), ('tag', 1), ('personnel', 1), ('welcomed', 1), ('adana', 1), ('search', 1), ('expressed', 1), ('desire', 1), ('democratic', 1), ('democractic', 1), ('open', 1), ('authoritarianism', 1), ('professor', 1), ('gaurav', 1), ('vallabh', 1), ('12th', 1), ('conference', 1), ('goal', 1)]\n",
+            " [('uncovered', 1), ('opinionated', 1), ('strongarm', 1), ('bhiwani', 1), ('lowy', 1), ('charaideo', 1), ('moidams', 1), ('adana', 1), ('expressed', 1), ('desire', 1), ('democractic', 1), ('altercation', 1), ('prithvi', 1), ('ioniq', 1), ('impressions', 1), ('ipc', 1), ('crpc', 1), ('saansad', 1), ('aadi', 1), ('partially', 1), ('leveraged', 1), ('jpc', 1), ('cpim', 1), ('favoured', 1), ('realize', 1), ('samadhan', 1), ('indicated', 1), ('expunged', 1), ('aerobatic', 1), ('beautification', 1), ('girgaon', 1), ('chowpatty', 1), ('psycho', 1), ('geometric', 1), ('madhyam', 1), ('varg', 1), ('spoiled', 1), ('muni', 1), ('ep52', 1), ('hatay', 1), ('box', 1), ('intimate', 1), ('wash', 1), ('dettol', 1), ('wfh', 1), ('deshpande', 1), ('irresponsibly', 1), ('d2', 1), ('estrangement', 1), ('sirohi', 1)]\n",
             "\n",
             "Cosine similarity matrix for df1 and df2:\n",
-            " [[1.         0.         0.         ... 0.         0.         0.        ]\n",
-            " [0.         1.         0.         ... 0.         0.         0.        ]\n",
-            " [0.         0.         1.         ... 0.         0.         0.125     ]\n",
+            " [[1. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 1. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 1. ... 0. 0. 0.]\n",
             " ...\n",
-            " [0.         0.         0.         ... 1.         0.15430335 0.        ]\n",
-            " [0.         0.         0.         ... 0.15430335 1.         0.        ]\n",
-            " [0.         0.         0.125      ... 0.         0.         1.        ]]\n",
+            " [0. 0. 0. ... 1. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 1. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 1.]]\n",
             "\n",
             "Cosine similarity matrix for df3 and df4:\n",
-            " [[1.         0.         0.         ... 0.         0.         0.        ]\n",
-            " [0.         1.         0.         ... 0.         0.         0.        ]\n",
-            " [0.         0.         1.         ... 0.         0.         0.125     ]\n",
+            " [[1. 0. 0. ... 0. 0. 0.]\n",
+            " [0. 1. 0. ... 0. 0. 0.]\n",
+            " [0. 0. 1. ... 0. 0. 0.]\n",
             " ...\n",
-            " [0.         0.         0.         ... 1.         0.15430335 0.        ]\n",
-            " [0.         0.         0.         ... 0.15430335 1.         0.        ]\n",
-            " [0.         0.         0.125      ... 0.         0.         1.        ]]\n"
+            " [0. 0. 0. ... 1. 0. 0.]\n",
+            " [0. 0. 0. ... 0. 1. 0.]\n",
+            " [0. 0. 0. ... 0. 0. 1.]]\n"
           ]
         }
       ]
@@ -2664,7 +2664,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1A8e7d0HDij32Vz9Dbn91nAK8qP5YSWBL",
-      "authorship_tag": "ABX9TyNlZaObVKVR+8CQZMMHh6GC",
+      "authorship_tag": "ABX9TyN5zIs0VFCZTrKV54ciIevF",
       "include_colab_link": true
     },
     "kernelspec": {
